Add archive.org url

--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
                         Github Page
                     </a>
                 </div>
+                <div class="text-center mt-4">
+                    <a class="btn btn-xl btn-outline-dark" href="https://web.archive.org/web/20201030050722/https://www.investperdiem.com/">
+                        <i class="fas fa-download mr-2"></i>
+                        Archived Site
+                    </a>
+                </div>
             </div>
         </section>
         <!-- Footer-->
